--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
           <artifactId>log4j-core</artifactId>
           <version>2.25.2</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+      <dependency>
+          <groupId>com.aventstack</groupId>
+          <artifactId>extentreports</artifactId>
+          <version>5.1.2</version>
+      </dependency>
 
   </dependencies>
     <build>
